Prevented box-shadow from being cutoff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,7 @@ input {
 .imageContainer {
     width: 70%;
     overflow: auto;
+    padding: 3px 0 0 3px;
 }
 
 /* Designing the banner of text along the gallery thumnbnails */
